@@ -1,1 +1,8 @@
-#
+# Main Config file for Portsdown 4 NG
+
+sdbutton=activehi
+display=Element14_7
+menulanguage=en
+startup=rptr
+webcontrol=enabled
+langstone=v2pluto
